operator/src/desired/snapshots/balerix_operator__desired__agent__tests__agent_claim.snap
---
source: src/desired/agent.rs
expression: o.claim
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/agent: alice
    balerix.ai/component: agent
    balerix.ai/crew: backend
    balerix.ai/daemon: default
    balerix.ai/fleet: payments
  name: payments-backend-alice
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Agent
      name: payments-backend-alice
      uid: agent-uid
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 40Gi
  storageClassName: standard
